--- a/contracts/order-management/Cargo.toml
+++ b/contracts/order-management/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "hello-world"
-version = "0.0.0"
+name = "marketx-order-management"
+version = "0.1.0"
 edition = "2021"
-publish = false
 
 [lib]
 crate-type = ["lib", "cdylib"]
