Implement Reputation and Rating System Contract #4
I have implemented the on-chain reputation system with weighted ratings and review history tracking.
I also added anti-gaming mechanics to prevent self-reviews and verified the logic with unit tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "contracts/auction",
   "contracts/hello-world",
   "contracts/marketplace",
+  "contracts/reputation",
 ]
 
 [workspace.package]
